--- a/java/sunbirdrc-actors/src/main/resources/sunbirdrc-actors.conf
+++ b/java/sunbirdrc-actors/src/main/resources/sunbirdrc-actors.conf
@@ -113,6 +113,12 @@
             dispatcher = rr-dispatcher
             package = dev.sunbirdrc.plugin
           }
+          /FetchCredentialsActor {
+              router = smallest-mailbox-pool
+              nr-of-instances = 3
+              dispatcher = rr-dispatcher
+              package = dev.sunbirdrc.plugin
+          }
           /DocumentUploadActor {
             router = smallest-mailbox-pool
             nr-of-instances = 3
