--- a/java/registry/pom.xml
+++ b/java/registry/pom.xml
@@ -135,6 +135,11 @@
             <version>${revision}</version>
         </dependency>
         <dependency>
+            <groupId>dev.sunbirdrc</groupId>
+            <artifactId>credential-external-plugin</artifactId>
+            <version>2.0.3</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
             <version>2.8.6</version>
